--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         }
     ],
     "require": {
-        "swiftmailer/swiftmailer": "^6.2"
+        "swiftmailer/swiftmailer": "^6.2",
+        "squizlabs/php_codesniffer": "*",
+        "friendsofphp/php-cs-fixer": "^2.15"
     }
 }
